- fix submission summary/history table to fill up horizontal space, but still overflow properly - only show link to full submission history table if submissions exceed summary view limit

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1347,10 +1347,13 @@ a.skip-main:active {
   font-size: 1em;
   z-index: 999;
 }
+// used in submission_history_table.html.erb
 table.sub {
-  display: block;
-  overflow-x: scroll;
+  display: table;
 }
 .sub th{
   vertical-align: top;
+}
+.submissions {
+  overflow-x: scroll;
 }
